# smartpark-system

./: .env.example  .gitignore  AGENTS.md  BUILD_REPORT.md  BUILD_SUMMARY.md  FINAL_VERIFICATION.md  ORCHESTRATOR_REPORT.json  PROJECT_BRIEF.md  README.md  VERIFICATION.md  agentloop.toml  docker-compose.yml  integration-test.sh
.github/workflows/: deploy.yml
.kiro/agents/: ai-builder.json  ai-planner.json  ai-reviewer.json
.kiro/steering/: orchestration.md
ai_orchestrator/: orchestrator.py  telegram_notifier.py
examples/school_device/: PROJECT_BRIEF.md  agentloop.toml
prompts/: builder_codex.md  continue_codex.md  discovery_kiro.md  planner_kiro.md  replan_kiro.md  review_kiro.md
sado-admin/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
sado-admin/scripts/: generate-routes.mjs
sado-admin/src/: app.tsx  index.css  main.tsx
sado-admin/tests/: accessibility-smoke.test.tsx  analysis-charts.test.tsx  api-client.test.ts  auth-store.test.ts  auth-tokens.test.ts  (+15 more)
sado-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
sado-api/.github/workflows/: ci.yml
sado-api/alembic/: env.py
sado-api/alembic/versions/: .gitkeep  0001_initial.py  0002_assessments.py  0003_exercises.py  0004_notifications.py
sado-api/app/: __init__.py  config.py  database.py  main.py
sado-api/app/api/: deps.py
sado-api/app/api/v1/: __init__.py  assessments.py  auth.py  children.py  exercises.py  health.py  kindergartens.py  notifications.py  regions.py  stats.py  users.py
sado-api/app/core/: __init__.py  exceptions.py  middleware.py  pagination.py  rate_limit.py  security.py
sado-api/app/models/: __init__.py  _base.py  assessment.py  child.py  exercise.py  kindergarten.py  notification.py  region.py  user.py
sado-api/app/schemas/: __init__.py  assessment.py  auth.py  child.py  exercise.py  kindergarten.py  notification.py  region.py  stats.py  user.py
sado-api/app/scripts/: __init__.py  seed_demo.py
sado-api/app/services/: __init__.py  audio_processor.py  auth.py  ml_scorer.py  speech_analyzer.py  storage.py
sado-api/app/workers/: __init__.py  celery_app.py  tasks.py
sado-api/tests/: __init__.py  conftest.py  test_assessments.py  test_assessments_edge.py  test_audio_processor.py  test_auth.py  test_children.py  test_database.py  test_exercises.py  test_exercises_edge.py  test_health.py  test_kindergartens.py  test_notifications.py  test_security.py  test_seed_demo.py  test_stats.py  test_storage.py  test_users.py
sado-mobile/: .gitignore  README.md  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+143 files in other folders)
