[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sado-api"
version = "0.1.0"
description = "SADO — AI Speech Therapy Platform backend API"
requires-python = ">=3.12"
authors = [{ name = "SADO Team" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.35",
    "greenlet==3.1.1",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "redis==5.1.1",
    "celery==5.4.0",
    "boto3==1.35.40",
    "httpx==0.27.2",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "moto[s3]==5.0.16",
    "ruff==0.6.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage gate is enforced here so every invocation (local + CI + orchestrator)
# uses the same threshold without needing extra flags.
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI idiomatically uses these calls in default arguments.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# Tests use module-level imports inside functions for fixture isolation.
"tests/**/*.py" = ["E402"]
"alembic/versions/**/*.py" = ["E402"]

[tool.coverage.run]
branch = true
source = ["app"]
# greenlet is required to trace SQLAlchemy async ORM operations; thread
# covers any plain ThreadPoolExecutor work (e.g. asyncio.to_thread).
concurrency = ["greenlet", "thread"]
omit = [
    "tests/*",
    "alembic/*",
    "app/workers/celery_app.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
